--- a/machine_translation.html
+++ b/machine_translation.html
@@ -12589,7 +12589,7 @@ new jersey est parfois chaud en l&#39; et il est est en en &lt;PAD&gt; &lt;PAD&g
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[47]:</div>
+<div class="prompt input_prompt">In&nbsp;[55]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">model_final</span><span class="p">(</span><span class="n">input_shape</span><span class="p">,</span> <span class="n">output_sequence_length</span><span class="p">,</span> <span class="n">english_vocab_size</span><span class="p">,</span> <span class="n">french_vocab_size</span><span class="p">):</span>
@@ -12604,7 +12604,7 @@ new jersey est parfois chaud en l&#39; et il est est en en &lt;PAD&gt; &lt;PAD&g
     <span class="c1"># TODO: Implement</span>
     <span class="n">learning_rate</span><span class="o">=</span><span class="mf">0.001</span>
     <span class="n">model</span> <span class="o">=</span> <span class="n">Sequential</span><span class="p">()</span>
-    <span class="n">model</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">Embedding</span><span class="p">(</span><span class="n">english_vocab_size</span><span class="p">,</span><span class="mi">128</span><span class="p">,</span><span class="n">input_length</span><span class="o">=</span><span class="n">input_shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]))</span>
+    <span class="n">model</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">Embedding</span><span class="p">(</span><span class="n">english_vocab_size</span><span class="p">,</span><span class="mi">256</span><span class="p">,</span><span class="n">input_length</span><span class="o">=</span><span class="n">input_shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]))</span>
     <span class="n">model</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">Bidirectional</span><span class="p">(</span><span class="n">GRU</span><span class="p">(</span><span class="mi">512</span><span class="p">,</span><span class="n">return_sequences</span><span class="o">=</span><span class="kc">False</span><span class="p">)))</span>
     <span class="n">model</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">RepeatVector</span><span class="p">(</span><span class="n">output_sequence_length</span><span class="p">))</span>
     <span class="n">model</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">Bidirectional</span><span class="p">(</span><span class="n">GRU</span><span class="p">(</span><span class="mi">512</span><span class="p">,</span><span class="n">return_sequences</span><span class="o">=</span><span class="kc">True</span><span class="p">)))</span>
@@ -12650,7 +12650,7 @@ new jersey est parfois chaud en l&#39; et il est est en en &lt;PAD&gt; &lt;PAD&g
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[50]:</div>
+<div class="prompt input_prompt">In&nbsp;[56]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
@@ -12707,31 +12707,60 @@ new jersey est parfois chaud en l&#39; et il est est en en &lt;PAD&gt; &lt;PAD&g
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Train on 110288 samples, validate on 27573 samples
 Epoch 1/10
-90s - loss: 2.5422 - acc: 0.4746 - val_loss: nan - val_acc: 0.5531
+92s - loss: 2.3341 - acc: 0.4938 - val_loss: nan - val_acc: 0.5882
 Epoch 2/10
-89s - loss: 1.4938 - acc: 0.6044 - val_loss: nan - val_acc: 0.6483
+91s - loss: 1.3707 - acc: 0.6371 - val_loss: nan - val_acc: 0.6726
 Epoch 3/10
-89s - loss: 1.1456 - acc: 0.6802 - val_loss: nan - val_acc: 0.7094
+91s - loss: 1.0388 - acc: 0.7106 - val_loss: nan - val_acc: 0.7344
 Epoch 4/10
-89s - loss: 0.9205 - acc: 0.7337 - val_loss: nan - val_acc: 0.7523
+91s - loss: 0.8197 - acc: 0.7592 - val_loss: nan - val_acc: 0.7764
 Epoch 5/10
-89s - loss: 0.7705 - acc: 0.7709 - val_loss: nan - val_acc: 0.7908
+91s - loss: 0.6613 - acc: 0.8026 - val_loss: nan - val_acc: 0.8198
 Epoch 6/10
-89s - loss: 0.6488 - acc: 0.8041 - val_loss: nan - val_acc: 0.8269
+91s - loss: 0.5362 - acc: 0.8389 - val_loss: nan - val_acc: 0.8549
 Epoch 7/10
-89s - loss: 0.5198 - acc: 0.8424 - val_loss: nan - val_acc: 0.8622
+91s - loss: 0.4326 - acc: 0.8707 - val_loss: nan - val_acc: 0.8822
 Epoch 8/10
-89s - loss: 0.4091 - acc: 0.8766 - val_loss: nan - val_acc: 0.8931
+91s - loss: 0.3400 - acc: 0.8983 - val_loss: nan - val_acc: 0.9058
 Epoch 9/10
-89s - loss: 0.3185 - acc: 0.9050 - val_loss: nan - val_acc: 0.9198
+91s - loss: 0.2646 - acc: 0.9221 - val_loss: nan - val_acc: 0.9287
 Epoch 10/10
-89s - loss: 0.2514 - acc: 0.9250 - val_loss: nan - val_acc: 0.9267
+91s - loss: 0.2143 - acc: 0.9362 - val_loss: nan - val_acc: 0.9426
 Sample 1:
 il a vu un vieux camion jaune &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt;
 Il a vu un vieux camion jaune
 Sample 2:
-new jersey est parfois calme au l&#39; automne et il est il en avril &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt;
+new jersey est parfois calme au cours et il est neigeux en avril &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt;
 &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt; &lt;PAD&gt;
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[54]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="nb">print</span><span class="p">(</span><span class="n">english_sentences</span><span class="p">[:</span><span class="mi">2</span><span class="p">])</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">french_sentences</span><span class="p">[:</span><span class="mi">2</span><span class="p">])</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt"></div>
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>[&#39;new jersey is sometimes quiet during autumn , and it is snowy in april .&#39;, &#39;the united states is usually chilly during july , and it is usually freezing in november .&#39;]
+[&#34;new jersey est parfois calme pendant l&#39; automne , et il est neigeux en avril .&#34;, &#39;les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .&#39;]
 </pre>
 </div>
 </div>
